--- a/config-server/src/main/resources/config/ticket-service.yml
+++ b/config-server/src/main/resources/config/ticket-service.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
-    url: jdbc:mysql://localhost:3306/HighwayTicketManagementSystem?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/HTMS-Ticket?createDatabaseIfNotExist=true
     hikari:
       maximum-pool-size: 5
 
